# kcl

./: .gitignore  CMakeLists.txt  GenerateClangMakefile.sh  GenerateGCCMakefile.bat  GenerateGCCMakefile.sh  GenerateMakefile.sh  GenerateVisualStudioProject.bat  LICENSE  LICENSE.txt  README.md
Source/: .clang-format
Source/KCL/: KCL_Platform.h  KCL_RTTI.h  KCL_Utils_Preprocessor.h
Source/KCL_Test/: KCL_RTTI_Test.cpp  KCL_RTTI_Test.h  main.cpp
